[package]
name = "xqr"
version = "0.3.0"
edition = "2021"
description = "eXtended QR Codes"
homepage = "https://xqr.dev"
repository = "https://github.com/xqr-dev/xqr-rs"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["secure", "qr", "code"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
jwtk = "0.2.4"
url = "2.4.0"
base64 = "0.21.2"
